; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_vdpau.c_check_preemption.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_vdpau.c_check_preemption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vdpctx* }
%struct.vdpctx = type { %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vo*)* @check_preemption to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_preemption(%struct.vo* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vo*, align 8
  %4 = alloca %struct.vdpctx*, align 8
  %5 = alloca i32, align 4
  store %struct.vo* %0, %struct.vo** %3, align 8
  %6 = load %struct.vo*, %struct.vo** %3, align 8
  %7 = getelementptr inbounds %struct.vo, %struct.vo* %6, i32 0, i32 0
  %8 = load %struct.vdpctx*, %struct.vdpctx** %7, align 8
  store %struct.vdpctx* %8, %struct.vdpctx** %4, align 8
  %9 = load %struct.vdpctx*, %struct.vdpctx** %4, align 8
  %10 = getelementptr inbounds %struct.vdpctx, %struct.vdpctx* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = load %struct.vdpctx*, %struct.vdpctx** %4, align 8
  %13 = getelementptr inbounds %struct.vdpctx, %struct.vdpctx* %12, i32 0, i32 2
  %14 = call i32 @mp_vdpau_handle_preemption(%struct.TYPE_2__* %11, i32* %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp slt i32 %15, 1
  br i1 %16, label %17, label %36

17:                                               ; preds = %1
  %18 = load %struct.vo*, %struct.vo** %3, align 8
  %19 = call i32 @mark_vdpau_objects_uninitialized(%struct.vo* %18)
  %20 = load i32, i32* %5, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 0, i32* %2, align 4
  br label %37

23:                                               ; preds = %17
  %24 = load %struct.vdpctx*, %struct.vdpctx** %4, align 8
  %25 = getelementptr inbounds %struct.vdpctx, %struct.vdpctx* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.vdpctx*, %struct.vdpctx** %4, align 8
  %30 = getelementptr inbounds %struct.vdpctx, %struct.vdpctx* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 8
  %31 = load %struct.vo*, %struct.vo** %3, align 8
  %32 = call i64 @initialize_vdpau_objects(%struct.vo* %31)
  %33 = icmp slt i64 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %37

35:                                               ; preds = %23
  br label %36

36:                                               ; preds = %35, %1
  store i32 1, i32* %2, align 4
  br label %37

37:                                               ; preds = %36, %34, %22
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @mp_vdpau_handle_preemption(%struct.TYPE_2__*, i32*) #1

declare dso_local i32 @mark_vdpau_objects_uninitialized(%struct.vo*) #1

declare dso_local i64 @initialize_vdpau_objects(%struct.vo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
